--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -20,13 +20,17 @@
     <string name="account_error_user_birthday">Ziua de naștere introdusă nu este validă</string>
     <string name="account_has_been_set">Modificați</string>
     <string name="account_limit_update_birthday">"Nu se poate actualiza ziua de naștere acum"</string>
+    <string name="account_mipay_info">Plăți Mi</string>
     <string name="account_no_set">Nimic</string>
     <string name="account_none">Nimic</string>
     <string name="account_none_binded_info">Niciunul</string>
     <string name="account_none_user_name">Nimic</string>
     <string name="account_protection">Protecție cont</string>
-    <string name="account_security_question">Întrebare de siguranță</string>
-    <string name="account_settings">Cont</string>
+    <string name="account_protection_off">Dezactivată</string>
+    <string name="account_protection_on">Activată</string>
+    <string name="account_secure_info_pref_title">Informații cont</string>
+    <string name="account_security">Securitate cont</string>
+    <string name="account_security_info_pref_title">Informații despre securitate</string>
     <string name="account_user_avatar">Fotografie de profil</string>
     <string name="account_user_avatar_from_album">Selectaţi o fotografie</string>
     <string name="account_user_avatar_from_camera">Faceţi o fotografie</string>
@@ -38,6 +42,7 @@
     <string name="account_user_gender">Sex</string>
     <string name="account_user_id">ID cont Mi</string>
     <string name="account_user_income">Venit lunar</string>
+    <string name="account_user_info">Informații utilizator</string>
     <string name="account_user_location">Locație</string>
     <string name="account_user_location_title">Selectați locația curentă</string>
     <string name="account_user_name">Nume</string>
@@ -46,11 +51,9 @@
     <string name="account_user_phone">Număr de telefon</string>
     <string name="account_user_recovery_phone">Telefon pentru recuperare</string>
     <string name="account_user_region">Regiune</string>
-    <string name="account_user_secure_info">Telefon şi e-mail</string>
     <string name="account_user_using_facebook_avatar">Utilizați fotografia profilului Facebook</string>
     <string name="account_user_using_qq_avatar">Utilizați fotografia de profil QQ</string>
     <string name="account_user_using_weibo_avatar">Utilizați fotografia de profil Sina Weibo</string>
-    <string name="account_vip_level">Cont</string>
     <string name="account_xiaomi_service">Servicii</string>
     <string name="activate_email_notice">Activați contul în cel mult 24 de ore!</string>
     <string name="activity_not_found_notice">"Nu s-a putut găsi aplicația"</string>
@@ -105,11 +108,7 @@
     <string name="device_trust_info">Dispozitiv de încredere</string>
     <string name="empty_device_list_notice">Niciun dispozitiv</string>
     <string name="error_dup_binded_email">Această adresă de e-mail este deja asociată cu un alt cont Mi.</string>
-    <string name="error_duplicate_answers">"Din motive de siguranță este recomandat să nu folosiți aceleași răspunsuri"</string>
-    <string name="error_incomplete_question_or_answer">Răspundeți la 4 întrebări</string>
     <string name="error_invalid_bind_address">Adresa de e-mail introdusă este incorectă.</string>
-    <string name="error_longer_answer_length">Răspunsul poate conține cel mult 128 de caractere</string>
-    <string name="error_shorter_answer_length">Răspunsul trebuie să conțină cel puțin 2 caractere</string>
     <string name="exceed_binded_phone_times_notice">Acest număr de telefon este asociat deja cu un alt cont Mi.</string>
     <string name="facebook">Facebook</string>
     <string name="failed_dup_secure_phone_number">Acest număr de telefon este deja asociat cu un alt cont Mi.</string>
@@ -132,11 +131,9 @@
     <string name="find_device_request_prepare_error">"Nu s-a putut obține starea; încercați din nou mai târziu"</string>
     <string name="find_device_unknown_error">"Nu s-a putut obține starea dispozitivului; așteptați un minut sau două și reîncercați"</string>
     <string name="first_login_time">Prima tentativă de conectare: %s</string>
-    <string name="forward_to_bind">Adăugați</string>
     <string name="get_device_list_failed">Nu se poate obține lista dispozitivelor</string>
     <string name="get_phone_verifycode_exceed_limit">Prea multe coduri de verificare au fost trimise la acest număr. Așteptați 24 de ore și încercați din nou.</string>
     <string name="guest_account_label">Cont gazdă Mi</string>
-    <string name="ignore">Nu acum</string>
     <string name="input_email_address_notice">"Vom folosi această adresă de e-mail pentru verificarea contului"</string>
     <string name="io_error_title">Confirmați rețeaua personală</string>
     <string name="just_a_second">Doar o secundă…</string>
@@ -148,20 +145,19 @@
     <string name="login_check_find_device_failed_title">"Nu s-au putut verifica informațiile despre securitatea telefonului"</string>
     <string name="login_find_device_bind">Acest telefon este asociat unui cont Mi existent (%s).</string>
     <string name="login_guard_prompt">Solicitare verificare număr de telefon la prima conectare la contul Mi de pe un dispozitiv necunoscut sau dintr-o aplicație necunoscută.</string>
+    <string name="logout_account">Deconectare</string>
     <string name="logout_failed">Nu se poate deconecta</string>
     <string name="mi_account_identity_title">Verificaţi identitatea dvs.</string>
-    <string name="mi_family">Familia de servicii Mi</string>
-    <string name="mi_insurance">Asigurare Mi</string>
-    <string name="mi_pass">Pașaport Mi</string>
-    <string name="mi_pay_identity">Identitate</string>
-    <string name="micloud_space_info">Disponibil: %s</string>
-    <string name="mili_center">Credite Mi</string>
-    <string name="mipay_center">Portofel Mi</string>
+    <string name="mipay">Plăți</string>
+    <string name="mipay_balance">Balanță</string>
+    <string name="mipay_bank_card">Card bancar</string>
+    <string name="mipay_identity">Identitate</string>
+    <string name="mipay_others">Altele</string>
+    <string name="mipay_transit_card">Cartele de transport</string>
     <string name="multi_user_not_show_sync_activity_message_1">"Se pare că utilizați contul Mi din spațiul principal."</string>
     <string name="multi_user_not_show_sync_activity_message_2">"În acest caz, toate datele vor fi sincronizate cu cele din spațiul secundar. Pentru a evita acest lucru, nu activați sincronizarea cu Mi Cloud"</string>
     <string name="multi_user_not_show_sync_activity_title">"Nu activați sincronizarea cu Mi Cloud"</string>
     <string name="my_device_title">Dispozitiv actual</string>
-    <string name="my_favorite">Favoritul meu</string>
     <string name="no_network_btn">Reîmprospătaţi</string>
     <string name="no_network_title">Nu se poate conecta la rețea.</string>
     <string name="no_response_retry">Niciun răspuns, reîncercaţi.</string>
@@ -347,53 +343,34 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="resend_email_reach_limit_message">"Ați solicitat prea multe e-mailuri de verificare. Verificați ca e-mailul să nu fi ajuns în dosarul Spam."</string>
     <string name="resend_email_reach_limit_title">"Nu se poate trimite e-mailul"</string>
     <string name="resend_email_success">E-mail retrimis</string>
-    <string name="reset_security_question_message">Trebuie să vă verificăm identitatea înainte de a modifica întrebările de siguranță</string>
-    <string name="reset_security_question_title">Resetare întrebări de siguranță</string>
     <string name="restart_action">Reporniţi</string>
     <string name="restart_phone_bind_message">Un mesaj text cu un cod de verificare va fi trimis la acest număr.</string>
     <string name="restart_phone_bind_title">Schimbaţi numărul de telefon pentru recuperare</string>
     <string name="scan_barcode_title">Pentru a vă conecta la contul dvs. Mi, scanaţi codul QR</string>
-    <string name="search_account_protection">Protejarea contului</string>
-    <string name="search_account_protection_desc">Protejarea contului</string>
-    <string name="search_account_protection_key_words">Protejarea contului</string>
-    <string name="search_account_protection_path">Setări/Contul Mi/Protejarea contului</string>
+    <string name="search_account_security">Securitate cont</string>
+    <string name="search_account_security_desc">Setări cont</string>
+    <string name="search_account_security_key_words">Schimbare telefon,Schimbare adresă de e-mail,Protecție cont,Conturi,Sina Weibo,QQ,Autorizare,Dispozitive</string>
+    <string name="search_account_security_path">Setări/Contul Mi/Setări cont</string>
     <string name="search_app_name">Contul Mi</string>
-    <string name="search_bind_Account">Conturi</string>
-    <string name="search_bind_Account_desc">Conturi</string>
-    <string name="search_bind_Account_key_words">Conturi,Sina Weibo,QQ,Autorizare</string>
-    <string name="search_bind_Account_path">Setări/Contul Mi/Conturi</string>
-    <string name="search_devices">Dispozitive</string>
-    <string name="search_devices_desc">Dispozitive</string>
-    <string name="search_devices_key_words">Dispozitive</string>
-    <string name="search_devices_path">Setări/Contul Mi/Dispozitive</string>
     <string name="search_logout_account">Deconectare</string>
     <string name="search_logout_account_desc">Contul Mi</string>
     <string name="search_logout_account_key_words">Deconectare</string>
-    <string name="search_logout_account_path">Setări/Contul Mi</string>
+    <string name="search_logout_account_path">Contul Mi/Setări cont,Setări/Contul Mi/Setări cont</string>
     <string name="search_mi_account">Contul Mi</string>
     <string name="search_mi_account_desc">Contul Mi</string>
-    <string name="search_mi_account_key_words">Contul Mi,Conectare,creare cont,Mi Cloud,Credite Mi,Portofel Mi,Paşaport Mi,Asigurare Mi,Setare cont,Gestionare cont</string>
+    <string name="search_mi_account_key_words">Contul Mi,Conectare,creare cont,Mi Cloud,Setare cont,Gestionare cont, Informații Plăți Mi</string>
     <string name="search_mi_account_path">Setări/Contul Mi</string>
     <string name="search_user_detail">Informaţii personale</string>
-    <string name="search_user_detail_bottom_key_words">Schimbare telefon,Modificare e-mail,Modificare venit,Modificare nivel educație,Modificare locație,Modificare regiune</string>
+    <string name="search_user_detail_bottom_key_words">Modificare venit, Modificare nivel educație, Modificare locație, Modificare regiune</string>
     <string name="search_user_detail_desc">Informații personale</string>
     <string name="search_user_detail_path">Setări/Contul Mi/Informații personale</string>
     <string name="search_user_detail_top_key_words">Informații personale,Modificare fotografie de profil,Modificare nume utilizator,Modificare pseudonim,Modificare dată de naștere,Modificare sex</string>
-    <string name="security_question">Selectați întrebarea</string>
-    <string name="security_question_answer">Introduceți răspunsul</string>
-    <string name="security_question_notice_message">Adăugați numărul de telefon înainte de a seta întrebările de siguranță pentru a putea reseta întrebările în cazul în care uitați răspunsurile</string>
-    <string name="security_question_notice_title">Asociați telefonul</string>
-    <string name="security_question_prompt">"Întrebările de siguranță pot fi utilizate atunci când modificați sau resetați parola.
-Asigurați-vă că știți răspunsurile la aceste întrebări."</string>
     <string name="select_location_title">Selectați locația dumneavoastră</string>
     <string name="send_email_activate_message">E-mailul de verificare a fost trimis</string>
     <string name="service_error">Eroare serviciu</string>
-    <string name="set_security_question_title">Alegeți întrebările de siguranță</string>
     <string name="sina_weibo">Sina Weibo</string>
     <string name="sms_send_success">Trimis</string>
     <string name="sns_access_token_expired_warning">Conectarea contului a expirat. Logați-vă din nou pentru a reconecta acest cont.</string>
-    <string name="submit_answers">Răspundeți</string>
-    <string name="success">Finalizat</string>
     <string name="trusted_browsers">Browsere de încredere</string>
     <string name="trusted_browsers_prompt">Acest browser nu va mai fi considerat de încredere dacă veți șterge cookie-urile.</string>
     <string name="turn_off_find_device_failed_title">"Nu se poate dezactiva Localizarea dispozitivului"</string>
@@ -413,4 +390,7 @@ Asigurați-vă că știți răspunsurile la aceste întrebări."</string>
     <string name="verified_devices">Dispozitive verificate</string>
     <string name="verify_phone_prompt">Selectați numărul de telefon pentru verificare</string>
     <string name="verify_phone_title">Verificați numărul de telefon</string>
+    <string name="vip_account_settings">Setări cont VIP</string>
+    <string name="vip_more_info">Mai multe informații cont VIP</string>
+    <string name="xiao_mi_vip">Mi VIP</string>
 </resources>
